lavc/j2kenc: Make jp2 output compatible with Kakadu.

Fixes ticket #4689.